--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ajv": "6.8.1",
     "amperize": "0.3.8",
     "analytics-node": "3.3.0",
+    "applicationinsights": "^1.0.0",
     "archiver": "3.0.0",
     "bcryptjs": "2.4.3",
     "bluebird": "3.5.3",
@@ -67,6 +68,7 @@
     "express-session": "1.15.6",
     "extract-zip": "1.6.7",
     "fs-extra": "3.0.1",
+    "ghost-azure-storage": "^2.0.0",
     "ghost-ignition": "3.0.4",
     "ghost-storage-base": "0.0.3",
     "glob": "5.0.15",
@@ -111,8 +113,7 @@
     "unidecode": "0.1.8",
     "uuid": "3.3.2",
     "validator": "6.3.0",
-    "xml": "1.0.1",
-    "applicationinsights": "^1.0.0"
+    "xml": "1.0.1"
   },
   "optionalDependencies": {
     "@tryghost/html-to-mobiledoc": "0.2.4",
