Fixed syntax issue on config for Azure Storage

--- a/config.production.json
+++ b/config.production.json
@@ -14,9 +14,11 @@
 			"maxAge": 600
 		}
 	},
-	"active": "ghost-azure-storage",
-			"ghost-azure-storage": {
-				"connectionString": AZURE_STORAGE_CONNECTION_STRING,
-				"container": "assets"
-			}
+	"storage": {
+    "active": "ghost-azure-storage",
+        "ghost-azure-storage": {
+          "connectionString": AZURE_STORAGE_CONNECTION_STRING,
+          "container": "assets"
+        }
+  },
 }
