--- a/content/adapters/storage/ghost-azure-storage/package.json
+++ b/content/adapters/storage/ghost-azure-storage/package.json
@@ -32,7 +32,9 @@
   "bundleDependencies": false,
   "dependencies": {
     "azure-storage": "~2.6.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "bluebird": "^3.5.1",
+    "ghost-storage-base": "^0.0.3"
   },
   "deprecated": false,
   "description": "Store content from ghost in azure file storage",
