Removed https in cdn

--- a/config.production.json
+++ b/config.production.json
@@ -15,11 +15,11 @@
 		}
 	},
 	"storage": {
-        "active": "ghost-azure-storage",
-            "ghost-azure-storage": {
-                "container": "assets",
-                "useHttps": "true",
-                "cdnUrl": "https://prtdomingoassets.azureedge.net"
-            }
-    }
+    "active": "ghost-azure-storage",
+        "ghost-azure-storage": {
+          "container": "assets",
+          "useHttps": "true",
+          "cdnUrl": "prtdomingoassets.azureedge.net"
+        }
+  }
 }
